Fix Gal Comments